--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,21 @@ dependencies:
   flutter:
     sdk: flutter
 
+  http: ^1.2.2
+  go_router: ^14.3.0
+  shared_preferences: ^2.3.2
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  accordion: ^2.6.0
+  font_awesome_flutter: ^10.7.0
+  internet_connection_checker: ^1.0.0+1
+  sqflite: ^2.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
